--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -27,6 +27,11 @@ services:
         arguments: ['@router', '%app_locales%', '%locale%']
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+            
+    app.fileuploader:
+        class: AppBundle\Services\FileUploader
+        arguments: [ '@doctrine.orm.entity_manager', '@request_stack', '@validator', '@kernel' ]
+
 
     # Uncomment the following lines to define a service for the Post Doctrine repository.
     # It's not mandatory to create these services, but if you use repositories a lot,
